2018-08-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genSend): fixed bug #2778
	* support/regression/tests/gcc-torture-execute-divconst-3.c: enabled test
	* support/regression/fwk/include/testfwk.h: added __printu, fixed __printd
	* support/regression/tests/bug-1981238.c: enabled more tests
	* support/regression/tests/gcc-torture-execute-pr86231.c: fixed warnings
	* support/regression/tests/gcc-torture-execute-va-arg-14.c: suppress warning

2018-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr85529-2.c:
	  Disable a test for older GCC.
	* support/regression/tests/new_wide.c:
	  Disable a test for host.

2018-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCloop.c:
	  Fix bug #2794.

2018-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr85529-1.c:
	  Disable a test for older GCC.

2018-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve error message on unbalanced stack.
	* support/regression/tests/bug-2793.c:
	  Test for bug #2793.

2018-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Fix an issue introduced in the bugfix for #2665.
	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Minor improvements in STM8 peephole optimization.
	* src/stm8/gen.c:
	  Minor improvement in STM8 subtraction codegen.

2018-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable a test for older GCC.
	* support/regression/ports/uc*/spec.mk:
	  Harmonize simulation timeouts for z80-related.
	* src/SDCCsymt.c,
	  src/SDCCdwarf2.c,
	  src/z80/main.c,
	  src/ds390/main.c,
	  device/lib/_rrulonglong.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rlslonglong.c:
	  Fix bug #2665.

2018-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  support/regression/tests/compare.c:
	  Improve range checks on 8- and 16-bit variables.