@@ -1,6 +1,11 @@
+2018-08-14 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/gcc-torture-execute-20060110-2.c: enabled test
+	* support/regression/tests/gcc-torture-execute-arith-rand.c: run only 100x
+
 2018-08-13 Maarten Brock <sourceforge.brock AT dse.nl>
 
-	* src/mcs51/gen.c (genSend): fixed bug #2778
+	* src/mcs51/gen.c (genSend): fixed bugs #2778, #2736
 	* support/regression/tests/gcc-torture-execute-divconst-3.c: enabled test
 	* support/regression/fwk/include/testfwk.h: added __printu, fixed __printd
 	* support/regression/tests/bug-1981238.c: enabled more tests
